--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=8000
-MONGO_URL="mongodb://127.0.0.1:27017/hobbyhub"
-AWS=Saikat@_111
+MONGO_URL="mongodb+srv://saikatusesnu:IW0T7MPKqEnCdxBG@project-creation.j98lybe.mongodb.net/hobbyhub"
